# agent-workflow-demo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
demo-prompts/: 01-debug-python-cli.ru.md  02-vault-llm-wiki.ru.md  03-scheduled-mr-report.ru.md
docs/: demo-1-debug-cli.ru.md  demo-2-vault-llm-wiki.ru.md  demo-script.md  lecture-2-flow.ru.md  local-private-notes.ru.md  mcp-and-scheduled-tasks.md
scripts/: reset-demo.sh  restore-demo.sh  verify.sh
src/agent_workflow_demo/: __init__.py  calculator.py  cli.py  models.py  vault.py
tests/: test_cli.py  test_vault_ingest.py  test_vault_lint.py
tests/fixtures/vault/: index.md
tests/fixtures/vault-clean/: index.md
tests/fixtures/vault-clean/notes/: good-note.md
tests/fixtures/vault/notes/: bad-note.md  duplicate-title.md  good-note.md
